--- a/mmf/mmf/configs/models/concat_bert_ud/defaults.yaml
+++ b/mmf/mmf/configs/models/concat_bert_ud/defaults.yaml
@@ -1,5 +1,5 @@
 model_config:
-  concat_bert_tutorial:
+  concat_bert_ud:
     # Type of bert model
     bert_model_name: bert-base-uncased
     direct_features_input: false
