--- a/mmf/mmf/configs/models/fusions/concat_bert.yaml
+++ b/mmf/mmf/configs/models/fusions/concat_bert.yaml
@@ -12,6 +12,8 @@ model_config:
     modal_hidden_size: 2048
     # Dimension of the embedding finally returned by the text encoder
     text_hidden_size: 768
+    # Dimension of the definition embeddings
+    definition_embedding_size: 768
     # Used when classification head is activated
     num_labels: 2
     # Number of features extracted out per image
